# blog-examples

./: .gitignore  .pylintrc  pyproject.toml
file_uploads_in_drf/: Dockerfile  docker-compose.yaml  manage.py
file_uploads_in_drf/file_uploads_in_drf/: settings.py  urls.py  wsgi.py
file_uploads_in_drf/file_uploads_in_drf/example/: admin.py  apps.py  base64_upload_view.py  models.py  renderers.py  router.py  s3_backend_upload_view.py  tests.py  two_step_upload_view.py
file_uploads_in_drf/file_uploads_in_drf/example/migrations/: 0001_initial.py  0002_tracks3_alter_track_file.py
graphql_like_features_drf/: manage.py
graphql_like_features_drf/graphql_like_features_drf/: asgi.py  settings.py  urls.py  wsgi.py
graphql_like_features_drf/graphql_like_features_drf/example/: apps.py  models.py  serializers.py  views.py
graphql_like_features_drf/graphql_like_features_drf/example/migrations/: 0001_initial.py
